saving pip install

--- a/Salary Prediction Notebook.ipynb
+++ b/Salary Prediction Notebook.ipynb
@@ -1,10 +1,55 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: pandas in /home/lin/.local/lib/python3.6/site-packages (from -r requirements.txt (line 1)) (1.1.3)\n",
+      "Requirement already satisfied: sklearn in /home/lin/.local/lib/python3.6/site-packages (from -r requirements.txt (line 2)) (0.0)\n",
+      "Requirement already satisfied: numpy in /home/lin/.local/lib/python3.6/site-packages (from -r requirements.txt (line 3)) (1.19.2)\n",
+      "Requirement already satisfied: scipy in /home/lin/.local/lib/python3.6/site-packages (from -r requirements.txt (line 4)) (1.5.3)\n",
+      "Requirement already satisfied: joblib in /home/lin/.local/lib/python3.6/site-packages (from -r requirements.txt (line 5)) (0.17.0)\n",
+      "Collecting matplotlib\n",
+      "  Using cached matplotlib-3.3.2-cp36-cp36m-manylinux1_x86_64.whl (11.6 MB)\n",
+      "Collecting scikit-image\n",
+      "  Using cached scikit_image-0.17.2-cp36-cp36m-manylinux1_x86_64.whl (12.4 MB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /home/lin/.local/lib/python3.6/site-packages (from pandas->-r requirements.txt (line 1)) (2.8.1)\n",
+      "Requirement already satisfied: pytz>=2017.2 in /home/lin/.local/lib/python3.6/site-packages (from pandas->-r requirements.txt (line 1)) (2020.1)\n",
+      "Requirement already satisfied: scikit-learn in /home/lin/.local/lib/python3.6/site-packages (from sklearn->-r requirements.txt (line 2)) (0.23.2)\n",
+      "Collecting cycler>=0.10\n",
+      "  Using cached cycler-0.10.0-py2.py3-none-any.whl (6.5 kB)\n",
+      "Collecting certifi>=2020.06.20\n",
+      "  Using cached certifi-2020.6.20-py2.py3-none-any.whl (156 kB)\n",
+      "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /home/lin/.local/lib/python3.6/site-packages (from matplotlib->-r requirements.txt (line 6)) (2.4.7)\n",
+      "Collecting pillow>=6.2.0\n",
+      "  Downloading Pillow-8.0.1-cp36-cp36m-manylinux1_x86_64.whl (2.2 MB)\n",
+      "\u001b[K     |████████████████████████████████| 2.2 MB 1.3 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting kiwisolver>=1.0.1\n",
+      "  Using cached kiwisolver-1.2.0-cp36-cp36m-manylinux1_x86_64.whl (88 kB)\n",
+      "Collecting networkx>=2.0\n",
+      "  Using cached networkx-2.5-py3-none-any.whl (1.6 MB)\n",
+      "Collecting imageio>=2.3.0\n",
+      "  Using cached imageio-2.9.0-py3-none-any.whl (3.3 MB)\n",
+      "Collecting PyWavelets>=1.1.1\n",
+      "  Using cached PyWavelets-1.1.1-cp36-cp36m-manylinux1_x86_64.whl (4.4 MB)\n",
+      "Collecting tifffile>=2019.7.26\n",
+      "  Using cached tifffile-2020.9.3-py3-none-any.whl (148 kB)\n",
+      "Requirement already satisfied: six>=1.5 in /home/lin/.local/lib/python3.6/site-packages (from python-dateutil>=2.7.3->pandas->-r requirements.txt (line 1)) (1.15.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /home/lin/.local/lib/python3.6/site-packages (from scikit-learn->sklearn->-r requirements.txt (line 2)) (2.1.0)\n",
+      "Requirement already satisfied: decorator>=4.3.0 in /home/lin/.local/lib/python3.6/site-packages (from networkx>=2.0->scikit-image->-r requirements.txt (line 7)) (4.4.2)\n",
+      "Installing collected packages: cycler, certifi, pillow, kiwisolver, matplotlib, networkx, imageio, PyWavelets, tifffile, scikit-image\n",
+      "Successfully installed PyWavelets-1.1.1 certifi-2020.6.20 cycler-0.10.0 imageio-2.9.0 kiwisolver-1.2.0 matplotlib-3.3.2 networkx-2.5 pillow-8.0.1 scikit-image-0.17.2 tifffile-2020.9.3\n"
+     ]
+    }
+   ],
    "source": [
-    "# Salary Predictions Based on Job Descriptions"
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -25,23 +70,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write the problem in your own words here"
+    "Predict salary based on job descriptions including company id, job type, degree, major, industry, years of experience and proximity to metropolis. The objective is to predict salary as accurately as possible or deviate from the actual as small as possible"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import your libraries\n",
+    "#import libraries\n",
     "import pandas as pd\n",
     "import sklearn as sk\n",
-    "#etc\n",
     "\n",
-    "#your info here\n",
-    "__author__ = \"your name here\"\n",
-    "__email__ = \"your email here\""
+    "#programmer info here\n",
+    "__author__ = \"Lin\"\n",
+    "__email__ = \"gmail\""
    ]
   },
   {
@@ -60,11 +104,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>116.061818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>38.717936</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>88.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>114.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>141.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>301.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               salary\n",
+       "count  1000000.000000\n",
+       "mean       116.061818\n",
+       "std         38.717936\n",
+       "min          0.000000\n",
+       "25%         88.000000\n",
+       "50%        114.000000\n",
+       "75%        141.000000\n",
+       "max        301.000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#load the data into a Pandas dataframe"
+    "#load the data into a Pandas dataframe\n",
+    "train_salaries= pd.read_csv('data/train_salaries.csv')\n",
+    "train_salaries.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000000 entries, 0 to 999999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column               Non-Null Count    Dtype \n",
+      "---  ------               --------------    ----- \n",
+      " 0   jobId                1000000 non-null  object\n",
+      " 1   companyId            1000000 non-null  object\n",
+      " 2   jobType              1000000 non-null  object\n",
+      " 3   degree               1000000 non-null  object\n",
+      " 4   major                1000000 non-null  object\n",
+      " 5   industry             1000000 non-null  object\n",
+      " 6   yearsExperience      1000000 non-null  int64 \n",
+      " 7   milesFromMetropolis  1000000 non-null  int64 \n",
+      "dtypes: int64(2), object(6)\n",
+      "memory usage: 61.0+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobId</th>\n",
+       "      <th>companyId</th>\n",
+       "      <th>jobType</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>major</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JOB1362684407687</td>\n",
+       "      <td>COMP37</td>\n",
+       "      <td>CFO</td>\n",
+       "      <td>MASTERS</td>\n",
+       "      <td>MATH</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JOB1362684407688</td>\n",
+       "      <td>COMP19</td>\n",
+       "      <td>CEO</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>WEB</td>\n",
+       "      <td>3</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JOB1362684407689</td>\n",
+       "      <td>COMP52</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JOB1362684407690</td>\n",
+       "      <td>COMP38</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>CHEMISTRY</td>\n",
+       "      <td>AUTO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JOB1362684407691</td>\n",
+       "      <td>COMP7</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>BACHELORS</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>FINANCE</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              jobId companyId         jobType       degree      major  \\\n",
+       "0  JOB1362684407687    COMP37             CFO      MASTERS       MATH   \n",
+       "1  JOB1362684407688    COMP19             CEO  HIGH_SCHOOL       NONE   \n",
+       "2  JOB1362684407689    COMP52  VICE_PRESIDENT     DOCTORAL    PHYSICS   \n",
+       "3  JOB1362684407690    COMP38         MANAGER     DOCTORAL  CHEMISTRY   \n",
+       "4  JOB1362684407691     COMP7  VICE_PRESIDENT    BACHELORS    PHYSICS   \n",
+       "\n",
+       "  industry  yearsExperience  milesFromMetropolis  \n",
+       "0   HEALTH               10                   83  \n",
+       "1      WEB                3                   73  \n",
+       "2   HEALTH               10                   38  \n",
+       "3     AUTO                8                   17  \n",
+       "4  FINANCE                8                   16  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features= pd.read_csv('data/train_features.csv', sep=',')\n",
+    "train_features.info()\n",
+    "train_features.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000000 entries, 0 to 999999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column               Non-Null Count    Dtype \n",
+      "---  ------               --------------    ----- \n",
+      " 0   jobId                1000000 non-null  object\n",
+      " 1   companyId            1000000 non-null  object\n",
+      " 2   jobType              1000000 non-null  object\n",
+      " 3   degree               1000000 non-null  object\n",
+      " 4   major                1000000 non-null  object\n",
+      " 5   industry             1000000 non-null  object\n",
+      " 6   yearsExperience      1000000 non-null  int64 \n",
+      " 7   milesFromMetropolis  1000000 non-null  int64 \n",
+      "dtypes: int64(2), object(6)\n",
+      "memory usage: 61.0+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobId</th>\n",
+       "      <th>companyId</th>\n",
+       "      <th>jobType</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>major</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JOB1362685407687</td>\n",
+       "      <td>COMP33</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>22</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JOB1362685407688</td>\n",
+       "      <td>COMP13</td>\n",
+       "      <td>JUNIOR</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>AUTO</td>\n",
+       "      <td>20</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JOB1362685407689</td>\n",
+       "      <td>COMP10</td>\n",
+       "      <td>CTO</td>\n",
+       "      <td>MASTERS</td>\n",
+       "      <td>BIOLOGY</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>17</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JOB1362685407690</td>\n",
+       "      <td>COMP21</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>OIL</td>\n",
+       "      <td>14</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JOB1362685407691</td>\n",
+       "      <td>COMP36</td>\n",
+       "      <td>JUNIOR</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>BIOLOGY</td>\n",
+       "      <td>OIL</td>\n",
+       "      <td>10</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              jobId companyId  jobType       degree    major industry  \\\n",
+       "0  JOB1362685407687    COMP33  MANAGER  HIGH_SCHOOL     NONE   HEALTH   \n",
+       "1  JOB1362685407688    COMP13   JUNIOR         NONE     NONE     AUTO   \n",
+       "2  JOB1362685407689    COMP10      CTO      MASTERS  BIOLOGY   HEALTH   \n",
+       "3  JOB1362685407690    COMP21  MANAGER  HIGH_SCHOOL     NONE      OIL   \n",
+       "4  JOB1362685407691    COMP36   JUNIOR     DOCTORAL  BIOLOGY      OIL   \n",
+       "\n",
+       "   yearsExperience  milesFromMetropolis  \n",
+       "0               22                   73  \n",
+       "1               20                   47  \n",
+       "2               17                    9  \n",
+       "3               14                   96  \n",
+       "4               10                   44  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_features= pd.read_csv('data/test_features.csv', sep=',')\n",
+    "test_features.info()\n",
+    "test_features.head()"
    ]
   },
   {
@@ -331,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
